<resources>
    <string name="app_name">BikeRun2</string>
    <string name="action_settings">Settings</string>
    <string name="address">https://www.strava.com</string>
    <string name="title_activity_strava_stats">Statistics</string>
    <string name="LOG_WARNING">LOG_WARNING</string>
    <string name="LOG_ERROR">LOG_ERROR</string>
    <string name="user">User</string>
    <string name="friends_count">Friends count</string>
    <string name="followers_count">Followers count</string>
    <string name="rides">Rides</string>
    <string name="rides__distance">rides, distance</string>
    <string name="downloading__">Downloading..</string>
    <string name="problem_with_downloading">Problem with downloading</string>
    <string name="title_activity_sport">SportActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="strava">Strava</string>
    <string name="gps">Gps</string>
    <string name="title_activity_prepare_containers">Prepare containers</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="training_is_not_started">Training is not started</string>
    <string name="unpause">UNPAUSE</string>
    <string name="left_page">LEFT PAGE</string>
    <string name="right_page">RIGHT PAGE</string>
    <string name="click_to_set">Click to set</string>
    <string name="stop_scan">STOP SCAN</string>
    <string name="start_scan">START SCAN</string>
    <string name="choose_field">Choose field</string>
    <string name="scan_button">Scan button</string>
    <string name="position">position</string>
    <string name="km">km</string>
    <string name="pref_speed_def">KM</string>
    <string name="pref_speed_unit_def">KM</string>
    <string name="pref_datafr_gps_accurancy_unit_def">M</string>
    <string name="pref_datafr_gps_accurancy_accurancy_def">0.1</string>
    <string name="title_activity_preapre_single_container">Preapre single container</string>
</resources>
