<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.shhatrat.bikerun2.view.activity.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/alerter_ic_face"
        android:title="@string/pref_header_general" />
    <header
        android:fragment="com.shhatrat.bikerun2.view.activity.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_gps_fixed_black_24dp"
        android:title="@string/gps" />

    <header
        android:fragment="com.shhatrat.bikerun2.view.activity.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.shhatrat.bikerun2.view.activity.settings.SettingsActivity$StravaPreferenceFragment"
        android:icon="@drawable/ic_strava_icon"
        android:title="@string/strava" />

    <header
        android:fragment="com.shhatrat.bikerun2.view.activity.settings.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
